acvus-mir-test/tests/snapshots/e2e__closure_capture_context.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     2 │   r2 = context_project @threshold
     3 │   r3 = context_load r2
     5 │   r4 = poison
     6 │   r5 = closure L0 []
     7 │   r6 = poison
     8 │   r7 = poison
    10 │   r8 = T0 + T0
    11 │   r9 = poison
    12 │   r10 = poison
    13 │   r11 = r8 + r10
    14 │   return r11

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r2 (@threshold) : <error>
    ; r3 (v3) : Int
    ; r4 (iter(...)) : Iterator<Int>
    ; r5 (v8) : Fn!(Int) -> Bool
    ; r6 (filter(...)) : Iterator!<Int>
    ; r7 (collect(...)) : List<Int>
    ; r8 (v12) : String
    ; r9 (len(...)) : Int
    ; r10 (to_string(...)) : String
    ; r11 (v16) : String
    ; r12 (v11) : String
    ; r13 (v6) : List<Int>
    ; r14 (v17) : List<Int>
    ; r15 (v4) : String
    ; r16 (x) : List<Int>
    ; r17 (@items) : List<Int>

=== closure L0 (ValueId(0)) ===
     0 │   r0 = context_project @threshold
     1 │   r1 = context_load r0
     2 │   r2 = r3 > r1
     3 │   return r2

    ; r0 (@threshold) : Int
    ; r1 (v3) : Int
    ; r2 (v4) : Bool
    ; r3 (v0) : Int
    ; r4 (i) : Int
    ; r5 (v5) : Int
