acvus-mir-test/tests/snapshots/e2e__closure_capture_local.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = undef
     1 │   r1 = undef
     2 │   r2 = context_project @items
     3 │   r3 = context_load r2
     7 │   r4 = T0 + T0
     8 │   r5 = call #0(r3)
     9 │   r6 = closure L0 [5 (r7)]
    10 │   r8 = call #1(r5, r6)
    11 │   r9 = call #2(r8)
    13 │   r10 = r4 + T0
    14 │   r11 = call #3(r9)
    15 │   r12 = call #4(r11)
    16 │   r13 = r10 + r12
    17 │   return r13

    ; r0 (v20) : List<Int>
    ; r1 (v21) : Int
    ; r2 (@items) : List<Int>
    ; r3 (v2) : List<Int>
    ; r4 (v6) : String
    ; r5 (iter(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r6 (v11) : Fn(Int) -> Bool
    ; r7 (v4) : Int
    ; r8 (filter(...)) : Iterator<Int, Resolved(EffectSet { reads: {}, writes: {}, io: false, self_modifying: false })>
    ; r9 (collect(...)) : List<Int>
    ; r10 (v15) : String
    ; r11 (len(...)) : Int
    ; r12 (to_string(...)) : String
    ; r13 (v19) : String
    ; r14 (v3) : String
    ; r15 (v14) : String
    ; r16 (@items) : List<Int>
    ; r17 (threshold) : Int
    ; r18 (v5) : String
    ; r19 (x) : List<Int>
    ; r20 (v8) : List<Int>

=== closure L0 (ValueId(1)) [captures: [ValueId(0)]] ===
     0 │   r0 = undef
     1 │   r1 = undef
     2 │   r2 = r3 > r4
     3 │   return r2

    ; r0 (v6) : Int
    ; r1 (v7) : Int
    ; r2 (v5) : Bool
    ; r3 (v2) : Int
    ; r4 (v1) : Int
    ; r5 (i) : Int
    ; r6 (threshold) : Int
