acvus-mir-test/tests/snapshots/e2e__context_call_simple.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = "value"

=== main ===
     1 │   r1 = context_call @node { key: T0 }
     2 │   yield r1

    ; r0 (v0) : String
    ; r1 (@node) : String
