acvus-mir-test/tests/snapshots/e2e__context_field_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @user
     1 │   r1 = context_load r0
     3 │   r2 = r1.name
     4 │   r3 = T0 + r2
     5 │   return r3

    ; r0 (@user) : {age: Int, email: String, name: String}
    ; r1 (v2) : {age: Int, email: String, name: String}
    ; r2 (name) : String
    ; r3 (v7) : String
    ; r4 (v3) : String
    ; r5 (v5) : {age: Int, email: String, name: String}
    ; r6 (@user) : {age: Int, email: String, name: String}
