acvus-mir-test/tests/snapshots/e2e__context_projection_store_1depth.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = ref @obj
     1 │   r1 = load r0
     3 │   r2 = ref @obj
     4 │   r3 = field_set r1.x = 42 (r4)
     5 │   r5 = ref @obj
     6 │   store r5 = r3
     7 │   r6 = ref @obj
     8 │   r7 = r3.x
     9 │   return r7

    ; r0 (@obj) : Ref<{x: Int}>
    ; r1 (@obj) : {x: Int}
    ; r2 (v7) : Ref<{x: Int}>
    ; r3 (v9) : {x: Int}
    ; r4 (v3) : Int
    ; r5 (v10) : Ref<{x: Int}>
    ; r6 (v11) : Ref<{x: Int}>
    ; r7 (v6) : Int
    ; r8 (@obj.x) : Ref<Int>
    ; r9 (v12) : {x: Int}
    ; r10 (v8) : {x: Int}
    ; r11 (@obj) : Ref<Int>
