acvus-mir-test/tests/snapshots/e2e__context_read.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = ref @count
     1 │   r1 = load r0
     3 │   r2 = ref @count
     4 │   r3 = call #0(r1)
     5 │   r4 = T0 + r3
     6 │   return r4

    ; r0 (@count) : Ref<Int>
    ; r1 (@count) : Int
    ; r2 (@count) : Ref<Int>
    ; r3 (to_string(...)) : String
    ; r4 (v7) : String
    ; r5 (v3) : String
    ; r6 (v5) : Int
