acvus-mir-test/tests/snapshots/e2e__deeply_nested_object_access.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = ref @data
     1 │   r1 = load r0
     3 │   r2 = ref @data
     4 │   r3 = r1.user.address.city
     5 │   r4 = T0 + r3
     6 │   return r4

    ; r0 (@data) : Ref<{user: {address: {city: String}}}>
    ; r1 (@data) : {user: {address: {city: String}}}
    ; r2 (v7) : Ref<{user: {address: {city: String}}}>
    ; r3 (v5) : String
    ; r4 (v6) : String
    ; r5 (v3) : String
    ; r6 (v8) : {user: {address: {city: String}}}
    ; r7 (@data.user.address.city) : Ref<String>
